_trash/pihole.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: networking
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: networking
spec:
  replicas: 1
  strategy:
    type: Recreate 
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 80
          name: web
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /etc/pihole
        - name: dnsmasq
          mountPath: /etc/dnsmasq.d
        resources:
          limits:
            memory: "256Mi"
          requests:
            memory: "128Mi"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: pihole-config
      - name: dnsmasq
        persistentVolumeClaim:
          claimName: pihole-dnsmasq
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-service
  namespace: networking
  annotations:
    # This tells MetalLB to allow TCP and UDP on the same IP
    metallb.universe.tf/allow-shared-ip: "pihole-svc"
spec:
  selector:
    app: pihole
  type: LoadBalancer
<<<<<<< HEAD
  loadBalancerIP: 192.168.1.253
=======
  # Pick your IP here
  loadBalancerIP: 192.168.1.23
>>>>>>> 7b993cc0438f3d0258fe07d023a1bc6343ce89ed
  ports:
    - port: 53
      targetPort: 53
      protocol: TCP
      name: dns-tcp
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
    - port: 80
      targetPort: 80
      protocol: TCP
      name: web
